fixed feedback text alignment

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -17,6 +17,7 @@ body {
 #quizfeedback {
   font-style: italic;
   font-size: 120%;
+  text-align: left;
   padding-top: 10px;
   color: gray;
   border-top: 6px solid purple;
